--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -74,6 +74,9 @@ var tableau:
 
 {{#if sess.isAdmin}}
 		LES TRUCS D'UN ADMIN HEUREUX !
+		<div class="container">
+			<a href="/schedule" role="button" class="btn btn-info">SCHEDULE</a>
+		</div>
 {{/if}}
 
 
