--- a/templates/views/forum_post.hbs
+++ b/templates/views/forum_post.hbs
@@ -3,6 +3,11 @@
 		<li class="list-group-item panel panel-default">
 			<div class="panel-heading">{{post.author}}</div>
 			<div class="panel-body">{{post.message}}</div>
+			<div class="panel-footer">
+				<a href="/forum/edit/post/{{post._id}}" role="button" class='btn btn-default'>
+					Edit this post
+				</a>
+			</div>
 		</li>
 
 		<li class="list-group-item panel panel-default">
@@ -12,6 +17,11 @@
 					<li class="list-group-item panel panel-default">
 						<div class="panel-heading">{{this.author}}</div>
 						<div class="panel-body">{{this.message}}</div>
+						<div class="panel-footer">
+							<a href="/forum/edit/post/{{this._id}}" role="button" class='btn btn-default'>
+								Edit this post
+							</a>
+						</div>
 					</li>
 				{{/each}}
 				</ul>
@@ -20,7 +30,13 @@
 </div>
 
 <div class="container">
-	<form method="POST">
+	<form
+		{{#if edit}}
+			action="/forum/edit/post/{{postId}}"
+		{{else}}
+			action="/forum/reply/post/{{postId}}"
+		{{/if}}
+	role="form" method="post">
 		{{#if edit}}
 			<h2>Edit this post</h2>
 		{{else}}
@@ -29,13 +45,7 @@
 		<div class="form-group">
 			<textarea class="form-control" rows="5" name="message">{{#if edit}}{{edit.message}}{{/if}}</textarea>
 		</div>
-		<button type="submit" class="btn btn-default"
-			{{#if edit}}
-				action="/forum/edit/post/{{postId}}"
-			{{else}}
-				action="/forum/reply/post/{{postId}}"
-			{{/if}}
-		>Submit</button>
+		<button type="submit" class="btn btn-default">Submit</button>
 	</form>
 </div>
 
