--- a/templates/views/create_projectgroup.hbs
+++ b/templates/views/create_projectgroup.hbs
@@ -3,5 +3,6 @@
 	{{#projectgroup_registration group_size}}
 		{{this}}
 	{{/projectgroup_registration}}
+	<button type="submit" class="btn btn-default">Submit</button>
 	</form>
 </div>
