--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -1,95 +1,104 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>42bigwebproj</title>
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link href="/styles/site.min.css" rel="stylesheet">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>42bigwebproj</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link href="/styles/site.min.css" rel="stylesheet">
 
-		<style>
-		#home
-		{
-			height: 30px;
-			width: 30px;
-		}
-		</style>
+<style>
+#home
+{
+	height: 30px;
+	width: 30px;
+}
+</style>
 
-		{{!-- This file provides the default styling for the KeystoneJS Content Editor
-			- only renders when user is logged in and admin--}}
-		{{{isAdminEditorCSS user}}}
+{{!-- This file provides the default styling for the KeystoneJS Content Editor
+- only renders when user is logged in and admin--}}
+{{{isAdminEditorCSS user}}}
 
-		{{!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-		//- Safely remove this block if you are not targeting IE8 --}}
-		<!--[if lt IE 9]>
+{{!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+//- Safely remove this block if you are not targeting IE8 --}}
+<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" />
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" />
 		<![endif]-->
 
-	</head>
-	<body>
-		<div id="header">
-			{{#if sess.logged}}
-			<div id="container">
+</head>
+<body>
+<div id="header">
+	{{#if sess.logged}}
+	<div id="container">
 
-<nav class="navbar navbar-default navbar-fixed-top"> <!-- nav bar !! -->
-	<div class="container-fluid">
+		<nav class="navbar navbar-default navbar-fixed-top"> <!-- nav bar !! -->
+			<div class="container-fluid">
 
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="/profile"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a>
+				</div>
 
+				<!-- -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav nav-pills nav-justified">
 
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav nav-pills nav-justified">
+						<li class="active">	<a href="/module">Modules</a></li>
+						<li>				<a href="/activity">Activites</a></li>
+						<li>				<a href="#">e-learning</a></li>
+						<li>				<a href="/forum">forum</a></li>
 
-				<li><a href="/profile"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a></li>
-				<li class="active">	<a href="/module">Modules</a></li>
-				<li>				<a href="/activity">Activites</a></li>
-				<li>				<a href="#">e-learning</a></li>
-				<li>				<a href="/forum">forum</a></li>
+						<li>
+						<form class="navbar-form" action="/search" method="POST" role="search">
+							<div class="form-group">
+								<input type="text" id="search" name="search" class="form-control" placeholder="Search">
+							</div>
+							<button type="submit" value="gosearch" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+						</form>
+						</li>
 
-				<li>
-					<form class="navbar-form" action="/search" method="POST" role="search">
-						<div class="form-group">
-							<input type="text" id="search" name="search" class="form-control" placeholder="Search">
-						</div>
-						<button type="submit" value="gosearch" class="btn btn-default">Submit</button>
-					</form>
-				</li>
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Another action</a></li>
+							<li><a href="#">Something else here</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="#">Separated link</a></li>
+						</ul>
+						</li>
 
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">Separated link</a></li>
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notifications<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Another action</a></li>
+							<li><a href="#">Something else here</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="#">Separated link</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="#">One more separated link</a></li>
+						</ul>
+						</li>
+
+						<li>				<a href="/logout">Logout</a></li>
+
 					</ul>
-				</li>
+				</div><!-- /.navbar-collapse -->
 
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notifications<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">Separated link</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#">One more separated link</a></li>
-					</ul>
-				</li>
-
-				<li>				<a href="/logout">Logout</a></li>
-
-			</ul>
-		</div><!-- /.navbar-collapse -->
-
-	</div><!-- /.container-fluid -->
-</nav><!-- !nav bar -->
+			</div><!-- /.container-fluid -->
+		</nav><!-- !nav bar -->
 
 
-<!--
+		<!--
 				{{#if userClass}}
 					{{#userNav userClass}}
 						{{this}}
@@ -97,57 +106,57 @@
 					{{/if}}
 -->
 
-			</div> <!-- div container -->
-			{{/if}}
-		</div> <!-- div header -->
-		<div id="body">
-			<!--
+	</div> <!-- div container -->
+	{{/if}}
+</div> <!-- div header -->
+<div id="body">
+	<!--
 				Flash messages allow you to display once-off status messages to users, e.g. form
 				validation errors, success messages, etc
 			-->
-			{{#if messages}}
-			<div id="flash-messages" class="container">
-				{{#if messages.info}}
-				<div class="alert alert-info">
-						{{{flashMessages messages.info}}}
-				</div>
-				{{/if}}
-				{{#if messages.success}}
-				<div class="alert alert-success">
-						{{{flashMessages messages.success}}}
-				</div>
-				{{/if}}
-				{{#if messages.warning}}
-				<div class="alert alert-warning">
-						{{{flashMessages messages.warning}}}
-				</div>
-				{{/if}}
-				{{#if messages.error}}
-				<div class="alert alert-danger">
-						{{{flashMessages messages.error}}}
-				</div>
-				{{/if}}
-			</div>
-			{{/if}}
-			<!-- The content block should contain the body of your template's content-->
-			{{{body}}}
+	{{#if messages}}
+	<div id="flash-messages" class="container">
+		{{#if messages.info}}
+		<div class="alert alert-info">
+			{{{flashMessages messages.info}}}
 		</div>
-		<div class="container">
-			<div id="footer">
-				<p>Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.</p>
-			</div>
+		{{/if}}
+		{{#if messages.success}}
+		<div class="alert alert-success">
+			{{{flashMessages messages.success}}}
 		</div>
-		{{!--
-			//- jQuery 1.11.1 is included by default, and required by both Bootstrap
-			//- and the KeystoneJS Content Editor. If you are not targeting IE8,
-			//- you can upgrade to 2.1.3 (also bundled) for better performance.
-		--}}
-		<script src="/js/jquery/jquery-1.11.2.min.js"></script>
-		{{!--
-			//- Customise which Bootstrap javascript files are served by including
-			//- them specifically here, instead of bootstrap-3.3.4.min.js
-		--}}
-		<script src="/js/bootstrap/bootstrap-3.3.4.min.js"></script>
-		{{{isAdminEditorJS user}}}
-	</body>
+		{{/if}}
+		{{#if messages.warning}}
+		<div class="alert alert-warning">
+			{{{flashMessages messages.warning}}}
+		</div>
+		{{/if}}
+		{{#if messages.error}}
+		<div class="alert alert-danger">
+			{{{flashMessages messages.error}}}
+		</div>
+		{{/if}}
+	</div>
+	{{/if}}
+	<!-- The content block should contain the body of your template's content-->
+	{{{body}}}
+</div>
+<div class="container">
+	<div id="footer">
+		<p>Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.</p>
+	</div>
+</div>
+{{!--
+//- jQuery 1.11.1 is included by default, and required by both Bootstrap
+//- and the KeystoneJS Content Editor. If you are not targeting IE8,
+//- you can upgrade to 2.1.3 (also bundled) for better performance.
+--}}
+<script src="/js/jquery/jquery-1.11.2.min.js"></script>
+{{!--
+//- Customise which Bootstrap javascript files are served by including
+//- them specifically here, instead of bootstrap-3.3.4.min.js
+--}}
+<script src="/js/bootstrap/bootstrap-3.3.4.min.js"></script>
+{{{isAdminEditorJS user}}}
+</body>
 </html>
