--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -6,7 +6,7 @@
 </div>
 {{/if}}
 
-<div class="container-fluid">
+<div class="container-fluid row">
 	{{#each data.modules}}
 	<div class="col-sm-3">
 		<div class="panel panel-default">
