--- a/templates/views/forum_post.hbs
+++ b/templates/views/forum_post.hbs
@@ -12,6 +12,7 @@
 
 		<li class="list-group-item panel panel-default">
 			<div class="panel-heading">Replies to this post:</div>
+			<div class="panel-body">
 				<ul class="list-group">
 				{{#each replies}}
 					<li class="list-group-item panel panel-default">
@@ -25,6 +26,7 @@
 					</li>
 				{{/each}}
 				</ul>
+			</div>
 		</li>
 	</ul>
 </div>
