--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -68,6 +68,8 @@ var tableau:
 				{{#each data.actList}}
 					Hi Activity : {{this.name}} </br>
 				{{/each}}
+
+				<a href="/profile/autologin" role="button" class="btn btn-default">Generate Autologin Link</a>
 			</p>
 		</div>
 {{/unless}}
