petit envie de bosser pendant 30mn un soir avant de dodo :D

--- a/templates/views/ticket_overview.hbs
+++ b/templates/views/ticket_overview.hbs
@@ -1,13 +1,26 @@
-<div class="container">
+<div class="container-fluid">
+	<a href="/ticket/new" class="btn btn-danger" role="button">Open a ticket</a>
+</div>
+
+<p></p>
+
+<div class="container-fluid">
 	{{#each tickets}}
-		<h4>{{this.title}}</h4>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h1>{{this.title}}</h1>
+		</div>
+		<div class="panel-body">
 		<p>{{this.state}}</p>
 		<p>written by {{this.author}} at {{this.createdAt}}</p>
 		<p>{{this.content}}</p>
 		<p>{{this.priority}}</p>
 		{{#if ../admin}}
-			{{#ticketHandlerButton this admin_id}}{{this}}{{/ticketHandlerButton}}
+			<div class="panel-footer">
+				{{#ticketHandlerButton this admin_id}}{{this}}{{/ticketHandlerButton}}
+			</div>
 		{{/if}}
+		</div>
+	</div>
 	{{/each}}
-	<a href="/ticket/new" class="btn btn-danger" role="button">Open a ticket</a>
 </div>
