--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -68,11 +68,10 @@
 						<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
+							<li><a href="/profile">My profil</a></li>
+							<li><a href="/peer_correction">Peer Correcting</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
+							<li><a href="/ticket">Ticket store</a></li>
 						</ul>
 						</li>
 
