--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -79,6 +79,7 @@ var tableau:
 		<div class="container">
 			<a href="/schedule" role="button" class="btn btn-info">SCHEDULE</a>
 		</div>
+		<a href="/profile/autologin" role="button" class="btn btn-default">Generate Autologin Link</a>
 {{/if}}
 
 
