--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -69,7 +69,8 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/profile">My profil</a></li>
-							<li><a href="/peer_correction">Peer Correcting</a></li>
+							<li><a href="#">Peer Correcting</a></li>
+							<li><a href="/notation">notation</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="/ticket">Ticket store</a></li>
 						</ul>
